# mesobot_project11

./: CMakeLists.txt  README.md  mesobot_commands.txt  package.xml  plugin.xml  setup.py
config/: control.yaml  mesobot.yaml  mesobot_operator.yaml  platform.yaml
doc/: README.md
include/mesobot_project11/: mesobot_plugin.h
launch/: mesobot.launch  sim_with_drix.launch
nodes/: ctd.py  follow_layer.py  mesobot_node.py  mesobot_sim.py
src/: mesobot_plugin.cpp  mesobot_plugin.ui
src/mesobot_project11/: dynamics.py
